# Danish-Longdoc-Benchmark

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
scripts/: apply_review.py  claude_review_flagged.py  extract_flagged.py  sample_failures.py  stage_retrieval_weights.sh
slurm/: eval_bge_m3.sh  eval_bm25.sh  eval_colpali.sh  eval_colqwen2.sh
src/danlonben/: __init__.py  config.py  dataset.py  features.py  ingestion.py  main.py  plots.py
src/danlonben/modeling/: predict.py  train.py
src/danlonben/pipeline/: __init__.py  graph.py  nodes.py  state.py
src/danlonben/qa/: false_negative_check.py
src/danlonben/retrieval/: evaluate.py  retrievers.py  run_eval.py
tests/: test_data.py
